Revert "dark mode love plus other fixes"
This reverts commit 15755c39db897bfe848f2499942f4fce94229d30.

--- a/src/ui/scss/component/_tags.scss
+++ b/src/ui/scss/component/_tags.scss
@@ -48,8 +48,8 @@ $main: $lbry-teal-5;
     margin-top: -2px; // To handle the border height
 
     [data-mode='dark'] & {
-      background-color: var(--dm-color-03);
-      border-color: $lbry-gray-4;
+      background-color: var(--dm-color-02);
+      border-color: $lbry-white;
     }
   }
 }
